# testWebApi2

./: README.md  testWebApi2.sln
TestWrapper/: MyLibWrapper.cs  TestWrapper.csproj  TestWrapper.nuspec
native/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
native/testCMake/: CMakeLists.txt  testCMake.cpp  testCMake.h  testCMake.vcxproj  testCMake.vcxproj.filters
native/testModule/: CMakeLists.txt  README.md  testModule.ixx
native/testSharedLibrary/: CMakeLists.txt  README.md  foo_support.h  install_SharedLib.vcxproj  install_SharedLib.vcxproj.filters  testSharedLibrary.cpp  testSharedLibrary.h  testSharedLibrary.vcxproj  testSharedLibrary.vcxproj.filters
native/testStaticLib/: CMakeLists.txt  README.md  testStaticLib.cpp  testStaticLib.h  testStaticLib.vcxproj  testStaticLib.vcxproj.filters
testWebApi2/: Dockerfile  Program.cs  Startup.cs  nuget.config  testWebApi2.csproj
testWebApi2/Controllers/: TestFooController.cs
testWebApi2/Properties/: launchSettings.json
